# CalibratedCAGP

./: README.md  pyproject.toml
cagp/: __init__.py  cagp.py
examples/: demo.ipynb
