[project]
name = "cagp"
version = "0.1.0"
description = ""
authors = [
    {name = "Disha Hegde",email = "dishahegde1228@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "cagp" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
